Fix spacing

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1318,11 +1318,11 @@ ul.items {
       font-weight: 500;
       margin-bottom: 8px;
     }
-    // 10px = 32px / 3 rows, ish
-    width: calc(33% - 10px);
+    // 19px = 64px / 3 rows, ish
+    width: calc(33% - 19px);
     @include breakpoints.down("md") {
       // 8px = 16px / 2 rows
-      width: calc(50% - 8px);
+      width: calc(50% - 16px);
     }
     @include breakpoints.down("sm") {
       width: 100%;
